9-10-2015 Add Amazeiffic and SelectorPratice code . CSS

--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -1,10 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Sign up for Amazeriffic</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="container">
 		<h1>Amazeriffic!</h1>
 		<nav>
 			<a href="#">Sign Up!</a> |
@@ -12,7 +14,7 @@
 			<a href="#">Support</a>
 		</nav>
 	</header>
-	<main>
+	<main class="container"> 
 		<h2>Amazeriffic will change your life!</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 		eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -23,7 +25,7 @@
 		</ul>
 		<img src="resource/lightbulb.png" alt="an image of a lightbulb">
 	</main>
-	<footer>
+	<footer class="container">
 		<div class="contact">
 			<h5>Contact Us</h5>
 			<p>Amazeriffic!</p>
